# music-streaming-app

./: .dockerignore  .gitignore  Dockerfile  LICENSE  data.json  demo.py  pyproject.toml  requirements.txt  testing.py  wsgi.py
src/: app.py  database.py  miscellaneous.py
static/audio/: maamadhura_dhee
static/css/: admin.css  creator.css  edit_song_details.css  index.css  layout.css  player.css  register.css  upload_song.css
static/js/: player.js
templates/: admin.html  creator.html  edit_song_details.html  index.html  layout.html  login.html  player.html  register.html  upload_song.html
